# ids-healthcare-cip

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  LICENSE  PHASE1_COMPLETION_SUMMARY.md  PHASE1_QUICKSTART.md  README.md  VERIFICATION_CHECKLIST.md  evaluation_app.py  extract_project_reality.py  plan.md  project_ground_truth.json  pyproject.toml  requirements.txt  run_all_modules.py  run_pipeline.py  setup.py  validate_phase1.py  validate_phase1_standalone.py
.github/workflows/: phase0.yml  phase1.yml  phase2.yml  phase3.yml  phase4.yml  phase5.yml  phase7.yml
_archive/config_legacy/: __init__.py  orchestration.yaml  phase3_config.yaml  phase5_config.yaml  settings.py
_archive/dashboard/: README.md  app.py
_archive/deploy/: Dockerfile.monitoring
config/: baseline_metrics.json  loader_schema.py  orchestration.yaml  phase0_config.yaml  phase1_config.yaml  phase1_ransomware_config.py  phase2_5_config.yaml  phase2_config.yaml  phase3_config.yaml  phase4_config.yaml  phase5_ci_config.yaml  phase5_config.yaml  phase7_ci_config.yaml  phase7_monitoring_config.yaml  production.yaml  production_loader.py  settings.py
dashboard/: README.md  app.py  requirements.txt
dashboard/assets/: style.css
dashboard/components/: detection.py  explanation.py  monitoring.py  overview.py  panel_alerts.py  panel_compliance.py  panel_crossval.py  panel_devices.py  panel_evaluation.py  panel_live_monitor.py  panel_model.py  panel_operational.py  panel_performance.py  panel_risk.py  panel_shap.py  panel_stakeholder.py  panel_system.py  upload.py
dashboard/simulation/: scenarios.py  (+3 more)
deploy/: Dockerfile  docker-compose.yml
docs/: ENGINE_MAP.md  PHASE1_IMPLEMENTATION.md  RANSOMWARE_AWARE_BACKUP_ARCHITECTURE.md  SYSTEM_WORKFLOW.md  api_documentation.md  backup_recovery.md  checkpointing_system.md  configuration_hygiene.md  data_flow.md  dependency_injection.md  thesis_methodology.md
examples/: schema_validation_examples.py
ids/: pyvenv.cfg
pipeline/: drift_detection.py  dynamic_threshold_sim.py  feedback_loop_demo.py
scripts/: backup_utils.py  checkpoint_utils.py  download_dataset.ps1  download_dataset.sh  generate_thesis_figures.py  prefect_pipeline.py  run_ablation_study.py  run_full_pipeline.py
src/: __init__.py  schemas.py
tests/: test_backup_and_storage.py  test_clinical_bench.py  test_config.py  test_config_safety.py  test_dashboard.py  test_data_loader_skip_report.py  test_human_centric.py  test_integration_pipeline.py  test_loader_schema.py  test_phase0.py  test_phase1.py  test_phase1_implementation.py  test_phase4.py  test_prefect_injection.py  test_production_hardening.py  test_production_services.py  test_qa_remediations.py  test_schemas.py  test_score_calibrator.py  test_svm_optimization.py  test_xai_validation.py
(+760 files in other folders)
