[project]
name = "ids-healthcare-cip"
version = "2.0.0"
description = "Healthcare IoMT Intrusion Detection System — IEEE Q1 research"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.bandit]
exclude_dirs = ["tests", "src/phase0_dataset_analysis/phase0/tests", "src/phase1_preprocessing/phase1/tests", "src/phase2_detection_engine/phase2/tests", "src/phase2_5_fine_tuning/phase2_5/tests", "src/phase3_classification_engine/phase3/tests", "src/phase4_risk_engine/phase4/tests", "src/phase5_explanation_engine/phase5/tests", "src/phase7_monitoring_engine/phase7/tests"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/phase0_dataset_analysis/phase0/tests", "src/phase1_preprocessing/phase1/tests", "src/phase2_detection_engine/phase2/tests", "src/phase2_5_fine_tuning/phase2_5/tests", "src/phase3_classification_engine/phase3/tests", "src/phase4_risk_engine/phase4/tests", "src/phase5_explanation_engine/phase5/tests", "src/phase7_monitoring_engine/phase7/tests"]
addopts = "-v --tb=short"
